added responsive style to HomeSlider and padding on the bottom of the mobile style for pageContainer, offers, profile, listingDetails, category and explore

--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,7 @@ button {
 .category,
 .explore {
   margin: 1rem;
+  padding-bottom: 1rem;
 }
 @media (min-width: 1024px) {
   .pageContainer,
@@ -818,4 +819,8 @@ button {
   margin-left: 1rem;
   font-size: 0.8rem;
   opacity: 0.75;
+}
+
+.homeSlider {
+  height: 33vh;
 }
