--- a/src/index.css
+++ b/src/index.css
@@ -228,7 +228,7 @@ button {
     margin: 0;
     padding: 0;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
     gap: 50px;
   }
